--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -1,8 +1,12 @@
 body {
+   
+   
     font-family: 'Roboto', sans-serif;
     background-color: white;
-    margin: 1rem;
-
+    margin: 0 auto;
+    background: white;
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
 }
 
 
@@ -55,11 +59,6 @@ h4 {
     font-weight: 200;
     font-style: italic;
     margin: auto;
-}
-
-body {
-    background: white;
-    font-family: 'Roboto', sans-serif;
 }
 
 nav {
@@ -122,7 +121,7 @@ nav a:hover {
 
 .section1 img {
     width: 100%;
-    border-radius: 1rem 1rem 0 0;
+    border-radius: .5rem .5rem 0 0;
 }
 
 .rentalSum {
@@ -130,7 +129,7 @@ nav a:hover {
     margin: 1.5rem;
     border: solid 8px white;
     box-shadow: 0 0 30px rgb(5, 5, 5);
-    border-radius: 1rem;
+    border-radius: .5rem;
 }
 
 .rentalSum ul {
@@ -187,6 +186,7 @@ img {
     width: 100%;
     height: auto;
     margin: 0;
+     border-radius: .5rem;
 }
 
 main.gallery {
@@ -217,6 +217,70 @@ figcaption {
     margin: 1rem auto;
     background-color: #84DCC6;
     padding: 1rem;
+}
+/* rental table starts here */
+.rental-table {
+    background-color: #FFDF6E;
+    padding: 2rem 2rem 1rem 1rem;
+    width: 100%;
+
+}
+.flat-table {
+   width: 80%; 
+}
+
+table,
+th,
+td {
+  border: 1px solid rgb(78, 76, 76);
+  border-collapse: collapse; 
+}
+
+table {
+  font-size: 100%;
+  overflow: auto;
+  width: 80%;
+  box-shadow: 10px 10px 10px #c4ad5d;
+  text-align: center;
+  margin: 0 auto;
+
+}
+b:only-child {
+  color: rgb(78, 76, 76);
+}
+
+tr:nth-child(odd) {
+  background-color: rgb(233, 233, 233);
+  color: #000000
+}
+
+tr:nth-child(even) {
+  background-color: white;
+}
+
+th,
+tfoot tr td {
+  background-color: #c6daf8;
+  color: rgb(78, 76, 76);
+  padding: 10px 10px;
+  
+}
+
+td {
+  padding: 8px 8px;
+}
+
+th {
+  font-weight: bold;
+  font-size: 1.75rem;
+}
+
+tfoot tr td {
+  font-size: .8rem;
+}
+
+#active{
+  color: #ffffff;
 }
 
 /* contact and map location */
