--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -148,7 +148,7 @@ nav a:hover {
 
 .section2 {
     max-width: 90%;
-    margin: 1.5rem;
+    margin: 1rem;
 
     padding: 1rem;
     color: rgb(54, 54, 54);
@@ -174,8 +174,10 @@ nav a:hover {
     border-right: solid slategrey 1px;
 
 }
-
-/*this is rentals grid*/
+.flex-col img {
+width: 40px;
+}
+/*this is rentals pic grid*/
 img[data-src] {
     filter: blur(0.2em);
 }
@@ -320,7 +322,92 @@ iframe {
 
 
 }
+/* the form starts here*/
+form fieldset {
+    margin: 0 auto;
+    border: 4px solid #FFFFFF;
+    border-radius: 10px;
+    padding: .5rem 2%;
 
+}
+
+form legend {
+    color: #000;
+    padding: 0 .8rem;
+    font-size: 1.5rem;
+    border: 5px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    text-align: left;
+    margin-top: 2rem;
+}
+
+
+form label.top,
+form div {
+    display: block;
+    padding-top: 1rem;
+    color: #0D3B66;
+    font-size: .8rem;
+}
+
+.top input,
+.top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    padding: .75rem;
+    border-radius: 4px;
+    border: 1px solid;
+    width: 90%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.sbs {
+    display: block;
+    padding: .50rem 0;
+
+}
+
+#ratingvalue {
+    padding: 1rem 0px;
+    font-size: 1.25rem;
+}
+
+.flexly {
+
+    display: flex;
+    flex-direction: column;
+    max-width: 20rem;
+    color: #0D3B66;
+    font-size: .8rem;
+}
+
+input.submitBtn {
+    margin: 1rem 0 1rem 1rem;
+    background-color: #FFDF6E;
+    color: #000;
+    border-radius: 6px;
+    border: 2px solid #cccccc;
+    padding: .75rem 1.5rem;
+    width: 100%;
+    max-width: 20rem;
+    box-shadow: 1px 1px 1px;
+}
+
+textarea {
+    box-shadow: 1px 1px 1px;
+    width: 96%;
+}
+
+.top input:required {
+    border-left: red solid 6px;
+}
+
+.top input:required:valid {
+    border-left: green solid 6px;
+}
 /*this is footer*/
 footer {
     display: block;
