--- a/lesson13/main.css/small.css
+++ b/lesson13/main.css/small.css
@@ -209,7 +209,7 @@ img {
     width: 100%;
     height: auto;
     margin: 0;
-     border-radius: .5rem;
+    
 }
 
 main.gallery {
@@ -331,7 +331,7 @@ tfoot tr td {
 }
 
 iframe {
-    border-radius: 1rem;
+    
     margin: 1rem;
 }
 
@@ -446,7 +446,30 @@ textarea {
     padding: 1rem;
     text-align: center;
 }
+/*tours page*/
 
+ .history {
+     background-color:#FFDF6E;
+ }
+.history p, .history h3 {
+    padding: 1rem;
+}
+ .grid section {
+    margin: 0.5rem;
+    align-items: center;
+}
+.grid section img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+    width: 250px;
+    height: auto;
+}
+.grid section p {
+    margin: 2rem .5rem .5rem 1rem;
+    line-height: 1.2em;
+}
 /*this is footer*/
 footer {
     display: block;
